cmake_minimum_required(VERSION 3.9)
project(UVa)

set(CMAKE_CXX_STANDARD 11)

# Dynamic programming
add_executable(116 116.cpp)
add_executable(437 437.cpp)
add_executable(1025 1025.cpp)
add_executable(1347 1347.cpp)
add_executable(12563 12563.cpp)
add_executable(11400 11400.cpp)
add_executable(11584 11584.cpp)
add_executable(1629 1629.cpp)
add_executable(242 242.cpp)

# greedy
add_executable(120 120.cpp)
add_executable(11134 11134.cpp)
add_executable(11054 11054.cpp)

add_executable(1605 1605.cpp)
add_executable(1152 1152.cpp)

