cmake_minimum_required(VERSION 3.10)
project(hdu)

set(CMAKE_CXX_STANDARD 11)

add_executable(1000 1000.cpp)
add_executable(1001 1001.cpp)
add_executable(1002 1002.cpp)
add_executable(1003 1003.cpp)
add_executable(1004 1004.cpp)
add_executable(1005 1005.cpp)
add_executable(1007 1007.cpp)
add_executable(1008 1008.cpp)
add_executable(1010 1010.cpp)
add_executable(1013 1013.cpp)
add_executable(1016 1015.cpp)
add_executable(1019 1019.cpp)
add_executable(1020 1020.cpp)
add_executable(1021 1021.cpp)
add_executable(1022 1022.cpp)
add_executable(1023 1023.cpp)
add_executable(1027 1027.cpp)
add_executable(1034 1034.cpp)
add_executable(1072 1072.cpp)
add_executable(1243 1243.cpp)
add_executable(1312 1312.cpp)
