cmake_minimum_required(VERSION 3.9)
project("past paper questions")

set(CMAKE_CXX_STANDARD 11)

add_executable(seventh_provincial_c_A_1 Seventh_lanqiao_personal_provincial_race/C_language_group_A/1.cpp)
add_executable(seventh_provincial_c_A_2 Seventh_lanqiao_personal_provincial_race/C_language_group_A/2.cpp)
add_executable(seventh_provincial_c_A_3 Seventh_lanqiao_personal_provincial_race/C_language_group_A/3.cpp)
add_executable(seventh_provincial_c_A_4 Seventh_lanqiao_personal_provincial_race/C_language_group_A/4.cpp)
add_executable(seventh_provincial_c_A_5 Seventh_lanqiao_personal_provincial_race/C_language_group_A/5.cpp)
add_executable(seventh_provincial_c_A_6 Seventh_lanqiao_personal_provincial_race/C_language_group_A/6.cpp)
add_executable(seventh_provincial_c_A_7 Seventh_lanqiao_personal_provincial_race/C_language_group_A/7.cpp)
add_executable(seventh_provincial_c_A_8 Seventh_lanqiao_personal_provincial_race/C_language_group_A/8.cpp)
add_executable(seventh_provincial_c_A_9 Seventh_lanqiao_personal_provincial_race/C_language_group_A/9.cpp)
add_executable(seventh_provincial_c_A_10 Seventh_lanqiao_personal_provincial_race/C_language_group_A/10.cpp)

add_executable(seventh_finals_c_A_1 Seventh_lanqiao_personal_finals_race/C_language_group_A/1.cpp)
add_executable(seventh_finals_c_A_3 Seventh_lanqiao_personal_finals_race/C_language_group_A/3.cpp)
add_executable(seventh_finals_c_A_4 Seventh_lanqiao_personal_finals_race/C_language_group_A/4.cpp)
add_executable(seventh_finals_c_A_5 Seventh_lanqiao_personal_finals_race/C_language_group_A/5.cpp)

add_executable(Wannafly_challenge_8_A Wannafly_challenge_8/A.cpp)
add_executable(Wannafly_challenge_8_B Wannafly_challenge_8/B.cpp)

add_executable(2018_lq_winter_first_A 2018_lanqiao_winter_vacation_camp/The_first_game/A.cpp)
