cmake_minimum_required(VERSION 3.9)
project(resursive)

set(CMAKE_CXX_STANDARD 11)

add_executable(resursive_search resursive_search.cpp)
add_executable(binary_search binary_search.cpp)
add_executable(merge_sort merge_sort.cpp)
add_executable(quick_sort quick_sort.cpp)
add_executable(selection_sort selection_sort.cpp)
add_executable(insertion_sort insertion_sort.cpp)
add_executable(bubble_sort bubble_sort.cpp)
add_executable(cocktail_shaker_sort cocktail_shaker_sort.cpp)
add_executable(eightQueensPuzzle eightQueensPuzzle.cpp)
add_executable(LIS LIS.cpp)
