cmake_minimum_required(VERSION 3.9)
project(training)

set(CMAKE_CXX_STANDARD 11)

add_executable(day1_0 day1/0.cpp)
add_executable(day1_1 day1/1.cpp)
add_executable(day1_2 day1/2.cpp)
add_executable(day1_3 day1/3.cpp)

add_executable(day2_1 day2/1.cpp)
add_executable(day2_2 day2/2.cpp)
add_executable(day2_3 day2/3.cpp)

add_executable(day3_1 day3/1.cpp)
add_executable(day3_2 day3/2.cpp)
add_executable(day3_3 day3/3.cpp)
